--- a/main.ipynb
+++ b/main.ipynb
@@ -765,7 +765,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Data Preparation"
+    "## 1.1 Data Preparation\n",
+    "\n",
+    "*Download the MovieLens dataset from here. After downloading, explore the dataset to understand the structure and identify any preprocessing steps needed.*"
    ]
   },
   {
@@ -1425,6 +1427,221 @@
     "plt.xlabel('Values')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we proceed, we want to check if the user Ids appearing in ```tag``` are a subset of the user Ids appearing in ```rating```. Moreover, it would be useful to verify if the unique (```userId```, ```movieId```) pairs from ```tag``` are contained in those from ```rating```. This will be helpful for the next point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All userId's in 'tag' are a subset of those in 'rating': True\n",
+      "All (userId, movieId) pairs in 'tag' are contained in 'rating': False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if the userIds in tag are a subset of userIds in 'rating'\n",
+    "tag_user_ids = set(tag['userId'])\n",
+    "rating_user_ids = set(rating['userId'])\n",
+    "# Verify if all userIds in 'tag' are in 'rating'\n",
+    "is_subset_user_ids = tag_user_ids.issubset(rating_user_ids)\n",
+    "print(f\"All userId's in 'tag' are a subset of those in 'rating': {is_subset_user_ids}\")\n",
+    "\n",
+    "# Check if the unique (userId, movieId) pairs in 'tag' are in 'rating'\n",
+    "tag_user_movie_pairs = set(zip(tag['userId'], tag['movieId']))\n",
+    "rating_user_movie_pairs = set(zip(rating['userId'], rating['movieId']))\n",
+    "\n",
+    "# Verify if all (userId, movieId) pairs in 'tag' are in 'rating'\n",
+    "are_tag_pairs_in_rating = tag_user_movie_pairs.issubset(rating_user_movie_pairs)\n",
+    "print(f\"All (userId, movieId) pairs in 'tag' are contained in 'rating': {are_tag_pairs_in_rating}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This result shows us that we can access all user Ids in the ```rating``` table. However, not all the movies every user has seen are in that table, because from the outputs above it appears that some users created tags for a movie without rating it. On the other hand, users can also rate a movie without creating tags for it. Therefore, when we want to get all the movies that a user has watched, we have to consider both ```rating``` and ```tag```.\n",
+    "\n",
+    "To make things easier, we can create another DataFrame where we store all unique (```userId```, ```movieId```) pairs appearing in the two tables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_movie_pairs = tag_user_movie_pairs.union(rating_user_movie_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame of unique userId, movieId pairs\n",
+    "user_movie_df = pd.DataFrame(user_movie_pairs, columns = ['userId','movieId'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13867178</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12684785</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18764807</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11801731</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17650326</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12922226</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>5269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9332791</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>1237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10433190</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>2628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5969483</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>5694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995578</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>1298</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20049009 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          userId  movieId\n",
+       "13867178       1     1215\n",
+       "12684785       1     4467\n",
+       "18764807       1     8961\n",
+       "11801731       1     8482\n",
+       "17650326       1     1266\n",
+       "...          ...      ...\n",
+       "12922226  138493     5269\n",
+       "9332791   138493     1237\n",
+       "10433190  138493     2628\n",
+       "5969483   138493     5694\n",
+       "9995578   138493     1298\n",
+       "\n",
+       "[20049009 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort the dataframe by 'userId'\n",
+    "user_movie_df.sort_values(by='userId',inplace=True)\n",
+    "user_movie_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Minhash Signatures\n",
+    "\n",
+    "*Using the userId and movieId columns, implement your own MinHash function. This function will hash each user's watched movie list, creating a representation that allows for quick comparisons of user similarities.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to use the ```userId``` and ```movieId``` columns to implement a MinHash function. This function has the purpose of hashing users based on their watched movie lists. Here are the steps we will take to implement the MinHash:\n",
+    "* Create a dictionary where the keys are user IDs and the values are the list of movie Ids of the movies that the user has rated or created a tag for.\n",
+    "* Use MovieIDs as shingles to break down movie lists into smaller items\n",
+    "* Create matrix where the columns represent UserIDs and the rows are the shingles (MovieIDs)\n",
+    "* Matrix values for a certain ```movieId``` and ```userId``` are 1 when a movie was watched by the user, 0 otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by 'userId' and aggregate movieId into lists\n",
+    "user_movies = user_movie_df.groupby('userId')['movieId'].apply(list).to_dict()"
    ]
   }
  ],
