--- a/main.ipynb
+++ b/main.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import re"
+    "import re\n",
+    "from collections import defaultdict\n",
+    "import hash\n",
+    "import time"
    ]
   },
   {
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1009,7 @@
        "Int64Dtype()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1165,7 @@
        "4                                           [Comedy]  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1286,7 @@
        "4                                           [Comedy]  1995  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1478,26 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_movie_pairs = tag_user_movie_pairs.union(rating_user_movie_pairs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a DataFrame of unique userId, movieId pairs\n",
-    "user_movie_df = pd.DataFrame(user_movie_pairs, columns = ['userId','movieId'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1603,12 +1587,16 @@
        "[20049009 rows x 2 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create a set without duplicates of the (userId, movieId) pairs\n",
+    "user_movie_pairs = tag_user_movie_pairs.union(rating_user_movie_pairs)\n",
+    "# Create a DataFrame of unique userId, movieId pairs\n",
+    "user_movie_df = pd.DataFrame(user_movie_pairs, columns = ['userId','movieId'])\n",
     "# Sort the dataframe by 'userId'\n",
     "user_movie_df.sort_values(by='userId',inplace=True)\n",
     "user_movie_df"
@@ -1628,20 +1616,56 @@
    "metadata": {},
    "source": [
     "We want to use the ```userId``` and ```movieId``` columns to implement a MinHash function. This function has the purpose of hashing users based on their watched movie lists. Here are the steps we will take to implement the MinHash:\n",
-    "* Create a dictionary where the keys are user IDs and the values are the list of movie Ids of the movies that the user has rated or created a tag for.\n",
     "* Use MovieIDs as shingles to break down movie lists into smaller items\n",
-    "* Create matrix where the columns represent UserIDs and the rows are the shingles (MovieIDs)\n",
-    "* Matrix values for a certain ```movieId``` and ```userId``` are 1 when a movie was watched by the user, 0 otherwise."
+    "* Create a dictionary where the keys are user IDs and the values are the array of movie Ids of the movies that the user has rated or created a tag for.\n",
+    "* Define k, the length of the signature vectors\n",
+    "* Pick k random hash functions, choosing among different parametrizations of the ```LCG_hash``` and ```bitwise_hash``` from the ```hash.py``` module we created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min movieId =  1 \n",
+      "Max movieId =  131262\n"
+     ]
+    }
+   ],
    "source": [
-    "# Group by 'userId' and aggregate movieId into lists\n",
-    "user_movies = user_movie_df.groupby('userId')['movieId'].apply(list).to_dict()"
+    "# Group by 'userId' and aggregate movieId into sets\n",
+    "user_movies = user_movie_df.groupby('userId')['movieId'].apply(np.array).to_dict()\n",
+    "# Print the min and max MovieId values to know the shingle range\n",
+    "print('Min movieId = ', min(movie['movieId']), '\\nMax movieId = ', max(movie['movieId']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time for minhash:  17.465389013290405\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 10\n",
+    "\n",
+    "user_ids = np.array(user_movie_df.userId.drop_duplicates())\n",
+    "movie_ids = np.array(user_movie_df.movieId.drop_duplicates())\n",
+    "\n",
+    "start1 = time.time()\n",
+    "signature_matrix = hash.minhash(user_ids, movie_ids, user_movies, k)\n",
+    "end1 = time.time()\n",
+    "print(\"Time for minhash: \", end1 - start1)"
    ]
   }
  ],
