--- a/main.ipynb
+++ b/main.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,278 +1612,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def linear_hash(x, a=238, b=943, p=27281):\n",
-    "    '''\n",
-    "    Use linear congruential generator to hash a positive integer (or array of integers)\n",
-    "    and use modulo to fit the result into the range [1, p]\n",
-    "    Inputs:\n",
-    "    - x (int or ndarray): integer or array of integers to hash\n",
-    "    - a (int): LCG scaling parameter\n",
-    "    - b (int): LCG shift parameter\n",
-    "    - p (int): prime\n",
-    "    Output:\n",
-    "    - int or ndarray: the hashed value(s) constrained to the range [1, p]\n",
-    "    '''\n",
-    "    return (a*x + b) % p\n",
-    "\n",
-    "# -------------------------------------------------------------------------------------------------------------------- #\n",
-    "\n",
-    "def bitwise_hash(x, a=238, b=4435, p=27281):\n",
-    "    '''\n",
-    "    Use bitwise hashing with XOR operator to hash a positive integer\n",
-    "    and use modulo to fit the result into the range [1, p]\n",
-    "    Inputs:\n",
-    "    - x (int or ndarray): integer or array of integers to hash\n",
-    "    - a (int): parameter\n",
-    "    - b (int): additive parameter\n",
-    "    - p (int): prime\n",
-    "    Output:\n",
-    "    - int or ndarray: the hashed value(s) constrained to the range [1, p]\n",
-    "    '''\n",
-    "    x = np.asarray(x)  # ensure input is a NumPy array\n",
-    "    return (np.bitwise_xor(x,a) + b) % p\n",
-    "    \n",
-    "# -------------------------------------------------------------------------------------------------------------------- #\n",
-    "\n",
-    "def random_minhash(user_ids, user_movies_dict, k = 10, p=27281, seed=198324):\n",
-    "    '''\n",
-    "    Creates signature vector of length k for each user ID by picking random hash functions\n",
-    "    to hash movie IDs\n",
-    "    Inputs:\n",
-    "    - user_ids (ndarray of integers): categories we want to create the signature vectors for\n",
-    "    - user_movies_dict (dict): dictionary made of items of the structure userId: [movieId1, movieId2, ...]\n",
-    "    - p (int): large prime number (larger than max movieId)\n",
-    "    - k (int): length of the signature vectors\n",
-    "    - seed (int): seed for reproducibility in randomness\n",
-    "    Outputs:\n",
-    "    - signature: matrix of signature vectors\n",
-    "    - hash_functions: list of tuples (i,a,b) where 'i' identifies the chosen hash function, and 'a', 'b' are its parameters\n",
-    "    '''\n",
-    "    # Pick k random hash functions like this:\n",
-    "    # 1. Generate k random binary numbers (sample from {0,1}^k)\n",
-    "    # 2. If the i-th number is 0, use linear_hash as the i-th function -> randomly generate parameters 'a' and 'b'\n",
-    "    # 3. If the i-th number is 1, use bitwise_hash as the i-th function -> randomly generate parameters 'a' and 'b'\n",
-    "\n",
-    "    rng = np.random.RandomState(seed) # create random number generator\n",
-    "    k_rand_binary = rng.randint(0,2,k) # generate k random numbers between 0 and 1\n",
-    "    signature = np.zeros((k, user_ids.shape[0]), dtype=int)  # Initialize matrix of signature vectors\n",
-    "    #print(k_rand_binary)\n",
-    "\n",
-    "    # Initialize list to store information about the hash functions that will be randomly chosen\n",
-    "    # To compare results and find the best combinations, we can use this\n",
-    "    hash_functions = [] \n",
-    "    \n",
-    "    # Create signature vectors\n",
-    "    for i in range(k):\n",
-    "\n",
-    "        # Case: use linear_hash function\n",
-    "        if k_rand_binary[i] == 0:\n",
-    "            # Generate random parameters 'a' and 'b'\n",
-    "            a, b = rng.randint(1,p), rng.randint(0,p)\n",
-    "            hash_functions.append((0,a,b))\n",
-    "\n",
-    "            # create signature values for elements i of the signature vectors\n",
-    "            for idx, user in enumerate(user_ids):\n",
-    "                hashed_movies = linear_hash(user_movies_dict[user],a,b,p)\n",
-    "                signature[i,idx] = np.min(hashed_movies)\n",
-    "\n",
-    "        # Case: use bitwise_hash function\n",
-    "        if k_rand_binary[i] == 1:\n",
-    "            # Generate random parameters 'a' and 'b'\n",
-    "            a, b = rng.randint(1,p), rng.randint(0,p)\n",
-    "            hash_functions.append((1,a,b))\n",
-    "\n",
-    "            # create signature values for elements i of the signature vectors\n",
-    "            for idx, user in enumerate(user_ids):\n",
-    "                hashed_movies = bitwise_hash(user_movies_dict[user],a,b,p)\n",
-    "                signature[i,idx] = np.min(hashed_movies)\n",
-    "\n",
-    "    return signature, hash_functions\n",
-    "\n",
-    "# -------------------------------------------------------------------------------- #\n",
-    "\n",
-    "\n",
-    "def minhash(user_ids, user_movies_dict, k_hash_function_choices, linear_parameters=None, bitwise_parameters=None, k = 10, p=27281):\n",
-    "    '''\n",
-    "    Creates signature vector of length k for each user ID given k pre-selected hash functions with\n",
-    "    established parameters\n",
-    "    Inputs:\n",
-    "    - user_ids (ndarray of integers): categories we want to create the signature vectors for\n",
-    "    - user_movies_dict (dict): dictionary made of items of the structure userId: [movieId1, movieId2, ...]\n",
-    "    - k_hash_function_choices (list): list of 0s and 1s representing the hash function chosen (0 for linear_hash, 1 for bitwise_hash)\n",
-    "    - linear_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for linear_hash\n",
-    "    - bitwise_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for bitwise_hash\n",
-    "    - p (int): large prime number (larger than max movieId)\n",
-    "    - k (int): length of the signature vectors\n",
-    "    Outputs:\n",
-    "    - signature: matrix of signature vectors\n",
-    "    '''\n",
-    "    signature = np.zeros((k, user_ids.shape[0]), dtype=int)  # Initialize matrix of signature vectors\n",
-    "    \n",
-    "    # Create signature vectors\n",
-    "    for i in range(k):\n",
-    "\n",
-    "        # Case: use linear_hash function\n",
-    "        if k_hash_function_choices[i] == 0:\n",
-    "            # Get parameters 'a' and 'b' for linear_hash\n",
-    "            a, b = linear_parameters.get(i)\n",
-    "\n",
-    "            # create signature values for elements i of the signature vectors\n",
-    "            for idx, user in enumerate(user_ids):\n",
-    "                hashed_movies = linear_hash(user_movies_dict[user],a,b,p)\n",
-    "                signature[i,idx] = np.min(hashed_movies)\n",
-    "\n",
-    "        # Case: use bitwise_hash function\n",
-    "        if k_hash_function_choices[i] == 1:\n",
-    "            # Get parameters 'a' and 'b' for bitwise_hash\n",
-    "            a, b = bitwise_parameters.get(i)\n",
-    "\n",
-    "            # create signature values for elements i of the signature vectors\n",
-    "            for idx, user in enumerate(user_ids):\n",
-    "                hashed_movies = bitwise_hash(user_movies_dict[user],a,b,p)\n",
-    "                signature[i,idx] = np.min(hashed_movies)\n",
-    "\n",
-    "    return signature\n",
-    "\n",
-    "# -------------------------------------------------------------------------------- #\n",
-    "\n",
-    "def jaccard_similarity(A, B):\n",
-    "    '''\n",
-    "    Function that calculates the jaccard similarity between two sets A and B\n",
-    "    Inputs:\n",
-    "    - A (set): set 1\n",
-    "    - B (set): set 2\n",
-    "    Output:\n",
-    "    - int: jaccard similarity between A and B\n",
-    "    '''\n",
-    "    return len(A.intersection(B))/len(A.union(B))\n",
-    "\n",
-    "# -------------------------------------------------------------------------------- #\n",
-    "\n",
-    "def random_minhash_results(user_ids, user_movies_dict, k = 10, p=27281, seed=198324):\n",
-    "    '''\n",
-    "    Function that computes the signature matrix of user IDs and compares the signature vectors with \n",
-    "    the similarity between the original watched movie sets associated with the user IDs\n",
-    "    Inputs:\n",
-    "    - user_ids (ndarray of integers): categories we want to create the signature vectors for\n",
-    "    - user_movies_dict (dict): dictionary made of items of the structure userId: [movieId1, movieId2, ...]\n",
-    "    - k_hash_function_choices (list): list of 0s and 1s representing the hash function chosen (0 for linear_hash, 1 for bitwise_hash)\n",
-    "    - linear_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for linear_hash\n",
-    "    - bitwise_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for bitwise_hash\n",
-    "    - p (int): large prime number (larger than max movieId)\n",
-    "    - k (int): length of the signature vectors\n",
-    "    Outputs:\n",
-    "    - error (int): error rate of this configuration\n",
-    "    - hash_functions (list): list of tuples (i,a,b) where 'i' identifies the chosen hash function, and 'a', 'b' are its parameters\n",
-    "    '''\n",
-    "    signature_matrix, hash_functions = random_minhash(user_ids, user_movies_dict, k, seed=seed)\n",
-    "    N = 1000 # number of users to compare\n",
-    "    # List of all user columns\n",
-    "    all_user_columns = list(range(signature_matrix.shape[1]))\n",
-    "    # Sampled user columns\n",
-    "    sampled_user_columns = random.sample(all_user_columns, N)\n",
-    "    # Split the sampled users into two groups\n",
-    "    first_group = sampled_user_columns[:(N//2)]\n",
-    "    second_group = sampled_user_columns[(N//2):]\n",
-    "\n",
-    "    errors = [] # Initialize list to store errors, the abs differences between P(s1[i]=s2[i]) and Jaccard(user1, user2)\n",
-    "    prob_values = [] # Initialize list to store probability values P(s1[i]=s2[i]) as defined above\n",
-    "    jaccard_values = [] # Initialize list to store Jaccard similarity values between pairs of users\n",
-    "\n",
-    "    # Pair-wise compare jaccard similarity of the users with their\n",
-    "    # probability of having corresponding signature vector elements\n",
-    "    for i in range(N//2):\n",
-    "\n",
-    "        # Signature vectors of the current pair of users\n",
-    "        signature1 = signature_matrix[:,first_group[i]]\n",
-    "        signature2 = signature_matrix[:,second_group[i]]\n",
-    "        # Compare signature vectors\n",
-    "        prob_same_el = sum(signature1==signature2)/k\n",
-    "        prob_values.append(prob_same_el) # add probability to prob_values list\n",
-    "\n",
-    "        # User ID of the current user\n",
-    "        user1 = user_ids[first_group[i]]\n",
-    "        user2 = user_ids[second_group[i]]\n",
-    "        # Sets of watched movies of the users (actually the virtual movie rows, but the result is the same)\n",
-    "        watched_movies1 = set(user_movies_dict[user1])\n",
-    "        watched_movies2 = set(user_movies_dict[user2])\n",
-    "        # Jaccard similarity of the users\n",
-    "        jaccard_sim = jaccard_similarity(watched_movies1, watched_movies2)\n",
-    "        jaccard_values.append(jaccard_sim) # add jaccard similarity to the list\n",
-    "\n",
-    "        # Calculate error\n",
-    "        errors.append(abs(prob_same_el - jaccard_sim))\n",
-    "\n",
-    "    return np.mean(errors), hash_functions\n",
-    "\n",
-    "# -------------------------------------------------------------------------------------------------- #\n",
-    "\n",
-    "def minhash_results(user_ids, user_movies_dict, k_hash_function_choices, linear_parameters=None, bitwise_parameters=None, k = 10, p=27281):\n",
-    "    '''\n",
-    "    Function that computes the signature matrix of user IDs and compares the signature vectors with \n",
-    "    the similarity between the original watched movie sets associated with the user IDs\n",
-    "    Inputs:\n",
-    "    - user_ids (ndarray of integers): categories we want to create the signature vectors for\n",
-    "    - user_movies_dict (dict): dictionary made of items of the structure userId: [movieId1, movieId2, ...]\n",
-    "    - k_hash_function_choices (list): list of 0s and 1s representing the hash function chosen (0 for linear_hash, 1 for bitwise_hash)\n",
-    "    - linear_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for linear_hash\n",
-    "    - bitwise_parameters (dict): None by default, else a dictionary that for key 'i', if it exists, contains the function parameters for bitwise_hash\n",
-    "    - p (int): large prime number (larger than max movieId)\n",
-    "    - k (int): length of the signature vectors\n",
-    "    Outputs:\n",
-    "    - error (int): error rate of this configuration\n",
-    "    - hash_functions (list): list of tuples (i,a,b) where 'i' identifies the chosen hash function, and 'a', 'b' are its parameters\n",
-    "    '''\n",
-    "    signature_matrix = minhash(user_ids, user_movies_dict, k_hash_function_choices, linear_parameters, bitwise_parameters, k = 10)\n",
-    "    \n",
-    "    N = 1000 # number of users to compare\n",
-    "    # List of all user columns\n",
-    "    all_user_columns = list(range(signature_matrix.shape[1]))\n",
-    "    # Sampled user columns\n",
-    "    sampled_user_columns = random.sample(all_user_columns, N)\n",
-    "    # Split the sampled users into two groups\n",
-    "    first_group = sampled_user_columns[:(N//2)]\n",
-    "    second_group = sampled_user_columns[(N//2):]\n",
-    "\n",
-    "    errors = [] # Initialize list to store errors, the abs differences between P(s1[i]=s2[i]) and Jaccard(user1, user2)\n",
-    "    prob_values = [] # Initialize list to store probability values P(s1[i]=s2[i]) as defined above\n",
-    "    jaccard_values = [] # Initialize list to store Jaccard similarity values between pairs of users\n",
-    "\n",
-    "    # Pair-wise compare jaccard similarity of the users with their\n",
-    "    # probability of having corresponding signature vector elements\n",
-    "    for i in range(N//2):\n",
-    "\n",
-    "        # Signature vectors of the current pair of users\n",
-    "        signature1 = signature_matrix[:,first_group[i]]\n",
-    "        signature2 = signature_matrix[:,second_group[i]]\n",
-    "        # Compare signature vectors\n",
-    "        prob_same_el = sum(signature1==signature2)/k\n",
-    "        prob_values.append(prob_same_el) # add probability to prob_values list\n",
-    "\n",
-    "        # User ID of the current user\n",
-    "        user1 = user_ids[first_group[i]]\n",
-    "        user2 = user_ids[second_group[i]]\n",
-    "        # Sets of watched movies of the users (actually the virtual movie rows, but the result is the same)\n",
-    "        watched_movies1 = set(user_movies_dict[user1])\n",
-    "        watched_movies2 = set(user_movies_dict[user2])\n",
-    "        # Jaccard similarity of the users\n",
-    "        jaccard_sim = jaccard_similarity(watched_movies1, watched_movies2)\n",
-    "        jaccard_values.append(jaccard_sim) # add jaccard similarity to the list\n",
-    "\n",
-    "        # Calculate error\n",
-    "        errors.append(abs(prob_same_el - jaccard_sim))\n",
-    "\n",
-    "    return np.mean(errors)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1998,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2021,13 +1749,13 @@
     "\n",
     "fig, axes = plt.subplots(1,2,figsize=(15,7))\n",
     "\n",
-    "# Distribution of linear_hash over movie_ids\n",
+    "# Distribution of linear_hash over row_indeces\n",
     "axes[0].hist(linear_results, bins=1000, color='lightblue', alpha=0.7)\n",
     "axes[0].set_xlabel('Hash Values')\n",
     "axes[0].set_ylabel('Frequency')\n",
     "axes[0].set_title(\"Distribution of 'linear_hash' values\")\n",
     "\n",
-    "# Distribution of bitwise_hash over movie_ids\n",
+    "# Distribution of bitwise_hash over row_indeces\n",
     "axes[1].hist(bitwise_results, bins=1500, color='orange', alpha=0.7)\n",
     "axes[1].set_xlabel('Hash Values')\n",
     "axes[1].set_ylabel('Frequency')\n",
@@ -3305,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
