--- a/main.ipynb
+++ b/main.ipynb
@@ -102,8 +102,8 @@
     "from collections import defaultdict\n",
     "import random\n",
     "from tqdm import tqdm\n",
-    "#from hash import *\n",
-    "#from recommendations import *\n",
+    "from hash import *\n",
+    "from recommendations import *\n",
     "import time"
    ]
   },
