--- a/AQ.ipynb
+++ b/AQ.ipynb
@@ -169,32 +169,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time complexity of the code above is $O(2^n)$. This can be shown by the following recursive relation:\n",
+    "The time complexity of the code above is $O(2^n)$. We can determine this by analyzing the code step by step.\n",
+    "\n",
+    "\n",
+    "- The first ```if``` cycle's condition is only verified if the ```nums``` array has no elements, and in this case the algorithm returns ```0``` in $O(1)$ time.\n",
+    "- The ```if-else``` block triggers the algorithm recursively when calculating ```best_scores(sublist of nums excluding first element, player number)``` and ```best_scores(sublist of nums excluding last element, player number)```, which means that the computational complexity of the algorithm is $2\\cdot T(n-1) + c$ where $c$ is some constant.\n",
+    "\n",
+    "\n",
+    "Therefore, we get the following recursive relation:\n",
+    "\n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
     "T(n) = \\text{cost.} & \\quad n = 0 \\\\\n",
-    "T(n) = 2T(n-1) &  \\quad n > 0\n",
+    "T(n) = 2 \\cdot T(n-1) + c &  \\quad n > 0\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
+    "\n",
     "By expanding the recurrence relation step-by-step, we find:\n",
     "$$\n",
-    "T(n-i+1) = 2^i(n-i) \n",
+    "T(n) = 2 \\cdot T(n-1) + c\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= 2\\cdot (2 \\cdot T(n-2) + c) + c\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= 2\\cdot (2 \\cdot (2 \\cdot T(n-3) + c) + c) + c\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\cdots\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= 2^i \\cdot T(n-i) + \\sum_{k=0}^i 2^k \\cdot c\n",
     "$$\n",
     "\n",
     "Continuing in this way:\n",
     "\n",
     "$$\n",
-    "T(n) = 2^n \\cdot T(0)\n",
+    "T(n) = 2^n \\cdot T(0) + \\sum_{k=0}^n 2^k \\cdot c\n",
     "$$\n",
     "\n",
+    "\n",
     "Since $ T(0) = \\text{cost.} $ , we can conclude that:\n",
+    "\n",
     "\n",
     "$$\n",
     "T(n) = O(2^n)\n",
     "$$\n",
-    "\n",
     "\n"
    ]
   },
@@ -232,7 +258,22 @@
     "    table = {}\n",
     "    RETURN best_scores(nums, 0, table) >= 0\n",
     "\n",
-    "```"
+    "```\n",
+    "\n",
+    "The memoization key here is ```(tuple(nums), player)```, where ```nums``` is the current array and ```player``` is 0 for Arya and 1 for Mario. Saving already calculated values in a table avoids having to recalculate them. This function still makes recursive calls, but the computational complexity does not increase exponentially at each call. Each ```(tuple(nums), player)``` state uniquely identifies every possible subproblem. Since ```nums``` has length $n$, the number of possible subarrays can be found by summing the number of possible sublists of length $k$ for $k=1,\\cdots,n$. For any $k$, we get $\\text{numSubarrays}=n-k+1$, so summing over $k$:\n",
+    "\n",
+    "$$\n",
+    "\\text{numSubarrays} = \\sum_{k=1}^n (n-k+1) = n^2 + n - \\sum_{k=1}^n k\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= n^2 + n - \\frac{1}{2} (n^2 + n) = \\frac{1}{2} n (n + 1) = O(n^2)\n",
+    "$$\n",
+    "\n",
+    "So for ```tuple(nums)``` there can be at most $O(n^2)$ values. Meanwhile for the ```player``` there are two possible values, so the complexity stays $O(2\\cdot n^2)=O(n^2)$.\n",
+    "\n",
+    "\n",
+    "Excluding the recursive calls, it takes $O(1)$ to compute the result of a state ```(tuple(nums), player)```, because each call to ```best_scores``` performs constant-time operations (comparisons and additions) and makes at most two recursive calls. The memoization makes sure that each subproblem is solved only once. Since there is a polynomial number of states, the overall time complexity is $O(n^2)$."
    ]
   },
   {
