--- a/main.ipynb
+++ b/main.ipynb
@@ -108,8 +108,8 @@
     "import random\n",
     "\n",
     "from tqdm import tqdm\n",
-    "#from hash import *\n",
-    "#from recommendations import *\n",
+    "from hash import *\n",
+    "from recommendations import *\n",
     "\n",
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -11985,7 +11985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -12336,9 +12336,6 @@
     "\n",
     "# Link the Button to the function\n",
     "search_button.on_click(on_search_button_click)\n",
-    "\n",
-    "# Link the Text widget to the submit function\n",
-    "#text_input.observe(on_text_submit, names='value')\n",
     "\n",
     "# Display both the text input and the search button\n",
     "display_widget(text_input, search_button)"
