Minor changes in main.ipynb file

--- a/main.ipynb
+++ b/main.ipynb
@@ -12400,6 +12400,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "movie = pd.read_csv('movie.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b5f09833428449ef918ed6cbdfbcf0fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=1.0, bar_style='info', layout=Layout(width='20px'), max=1.0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's explore how many unique genres do we have in the dataset\n",
+    "genres = []\n",
+    "for i, r in tqdm(movie.iterrows()):\n",
+    "    for g in r['genres'].split('|'):\n",
+    "        if g not in genres:\n",
+    "            genres.append(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Adventure',\n",
+       " 'Animation',\n",
+       " 'Children',\n",
+       " 'Comedy',\n",
+       " 'Fantasy',\n",
+       " 'Romance',\n",
+       " 'Drama',\n",
+       " 'Action',\n",
+       " 'Crime',\n",
+       " 'Thriller',\n",
+       " 'Horror',\n",
+       " 'Mystery',\n",
+       " 'Sci-Fi',\n",
+       " 'IMAX',\n",
+       " 'Documentary',\n",
+       " 'War',\n",
+       " 'Musical',\n",
+       " 'Western',\n",
+       " 'Film-Noir',\n",
+       " '(no genres listed)']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Total: 19 genres + 1 unspecified genre\n",
+    "genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to extract title and year\n",
+    "def extract_title_and_year(title):\n",
+    "    match = re.match(r'^(.*)\\s\\((\\d{4})\\)$', title)\n",
+    "    if match:\n",
+    "        return [match.group(1), match.group(2)]  # Return title and year as a list\n",
+    "    else:\n",
+    "        return [title, None]  # In case there's no year, return title and None\n",
+    "\n",
+    "# movie['genres'] = movie['genres'].str.split('|')\n",
+    "movie[['title', 'year']] = pd.DataFrame(movie['title'].apply(extract_title_and_year).to_list(), index=movie.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27278 entries, 0 to 27277\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   movieId  27278 non-null  int64 \n",
+      " 1   title    27278 non-null  object\n",
+      " 2   genres   27278 non-null  object\n",
+      " 3   year     27223 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 852.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert \"year\" to float datatype\n",
+    "movie['year'] = movie['year'].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movieId     0\n",
+       "title       0\n",
+       "genres      0\n",
+       "year       55\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# compute missing values\n",
+    "movie.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# impute year column\n",
+    "movie = impute(movie, 'year', 'genres')\n",
+    "\n",
+    "# Convert \"year\" to int datatype\n",
+    "movie['year'] = movie['year'].round().astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "movie = movie[['movieId', 'year', 'genres']]\n",
     "\n",
     "movie['num_genres'] = movie['genres'].apply(lambda x: len(x.split('|')))"
