--- a/main.ipynb
+++ b/main.ipynb
@@ -108,8 +108,8 @@
     "import random\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from hash import *\n",
-    "from recommendations import *\n",
+    "from module.hash import *\n",
+    "from module.recommendations import *\n",
     "\n",
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.preprocessing import StandardScaler\n",
