--- a/main.ipynb
+++ b/main.ipynb
@@ -120,8 +120,8 @@
     "import time\n",
     "\n",
     "# custom libraries\n",
-    "import k_means as km\n",
-    "import k_means_plus_plus as kpp"
+    "import module.k_means as km\n",
+    "import module.k_means_plus_plus as kpp"
    ]
   },
   {
